force-app/main/default/objects/Questionnaire_Question__c/Questionnaire_Question__c.object-meta.xml
<CustomObject>
    <description>Junction object section and question library</description>
    <label>Question</label>
    <nameField>
        <label>Questionnaire Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>