force-app/main/default/objects/Questionnaire_Question__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Questionnaire</label>
    <referenceTo>Question_Category__c</referenceTo>
    <relationshipName>Questionnaires_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>